--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://userweb:@azerty34@127.0.0.1:3306/lineshop"
+DATABASE_URL="mysql://adminlineshop:@lineshop123@127.0.0.1:3306/lineshop"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
