--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,7 +8,11 @@ parameters:
   articles_directory: "%kernel.project_dir%/public/images"
 
 services:
+  # App\Service\FileUploader:
+  #   arguments:
+  #   $targetDirectory: "%articles_directory%"
   # default configuration for services in *this* file
+
   _defaults:
     autowire: true # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
